@@ -1,0 +1,3 @@
+	public static final void NOPH_registerCallback(int which, int fnAddress) {
+	    CRunTime.callbacks[which] = fnAddress;
+	}
