@@ -18,8 +18,13 @@ extern "C" {
 #include <cibyl.h>
 #include <stddef.h>
 
+/* Helper to register callback functions (this is not part of ANSI C, but... ) */
+void NOPH_registerCallback(int which, int fnAddr); /* Not generated */
+
 void exit(int code); /* Not generated */
 #define abort() exit(1)
+
+extern int atexit(void (*function)(void));
 
 extern void* malloc(size_t size);
 extern void free(void* ptr);
